[package]
name = "RFB01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-multipart = "0.4"

chrono = { version = "0.4.19", features = ["serde"] }

dotenv = "0.15.0"
env_logger = "0.9.0"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
futures = "0.3.28"
async-std = "1.12.0"
sanitize-filename = "0.4.0"
